--- a/project2/makefile
+++ b/project2/makefile
@@ -1,9 +1,12 @@
 CC=gcc
 CFLAGS=-g -Wall 
 
-all: freitast.buildrooms 
+all: freitast.buildrooms freitast.adventure
 
 freitast.buildrooms: freitast.buildrooms.o 
+	$(CC) $^ -o $@
+
+freitast.adventure: freitast.adventure.o 
 	$(CC) $^ -o $@
 
 clean:
