send both files from enc to enc_d

--- a/project4/makefile
+++ b/project4/makefile
@@ -1,14 +1,19 @@
 CC=gcc
-CFLAGS=-g -Wall -std=c99
-
-all: keygen 
+CFLAGS=-g -Wall 
+all: keygen opt_enc_d opt_enc
 
 keygen: keygen.o 
 	$(CC) $^ -o $@ 
 
+opt_enc_d: opt_enc_d.o 
+	$(CC) $^ -o $@ 
+	
+opt_enc: opt_enc.o 
+	$(CC) $^ -o $@ 
 
 clean:
 	-rm *.o
 
 cleanall: clean
-	-rm keygen
+	-rm keygen opt_enc_d opt_enc
+
