--- a/project4/makefile
+++ b/project4/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-g -Wall 
-all: keygen opt_enc_d opt_enc
+all: keygen opt_enc_d opt_enc opt_dec_d opt_dec
 
 keygen: keygen.o 
 	$(CC) $^ -o $@ 
@@ -9,6 +9,12 @@ opt_enc_d: opt_enc_d.o
 	$(CC) $^ -o $@ 
 	
 opt_enc: opt_enc.o 
+	$(CC) $^ -o $@ 
+
+opt_dec_d: opt_dec_d.o 
+	$(CC) $^ -o $@ 
+	
+opt_dec: opt_dec.o 
 	$(CC) $^ -o $@ 
 
 clean:
